fix: title alignment

--- a/src/Components/landing/landing.css
+++ b/src/Components/landing/landing.css
@@ -62,6 +62,16 @@ div {
     left: 5rem;
   }
 }
+@media screen and (max-width: 400px) {
+  .title {
+    margin-left: -1rem;
+    margin-right: auto;
+    text-align: center;
+    font-size: 1.7rem;
+    position: absolute;
+    left: 5rem;
+  }
+}
 /* NAVBAR PROPERTIES */
 nav {
   margin-left: 2.5rem;
@@ -112,6 +122,7 @@ nav {
     grid-template-rows: repeat(3, 1fr);
     justify-items: left;
     z-index: 120;
+    width: 2.5rem;
   }
 
   .hamburger1 div {
@@ -202,6 +213,7 @@ nav {
     margin-top: 1.2rem;
     display: flex;
     flex-direction: column;
+    width: 2rem;
   }
 
   .hamburger1 div {
